# PAC-FastDownwards

./: .gitignore  README.md  Statistics_test.csv  run_search.sh  run_search.sh~
.hg/: dirstate
.hg/cache/: branchheads-served  tags
.hg/store/: 00changelog.d  00changelog.i  00manifest.d  00manifest.i  fncache  undo
benchmarks/: domains.txt
benchmarks/assembly/: assembly.pddl
benchmarks/assembly_gen/: prob_assembly0440.pddl  prob_assembly100440.pddl  prob_assembly101440.pddl  prob_assembly101450.pddl  prob_assembly102440.pddl  prob_assembly103440.pddl  prob_assembly103450.pddl  prob_assembly104450.pddl  prob_assembly10450.pddl  prob_assembly105440.pddl  prob_assembly105450.pddl  prob_assembly106440.pddl  prob_assembly108450.pddl  prob_assembly109450.pddl  prob_assembly110440.pddl  prob_assembly113440.pddl  prob_assembly113450.pddl  prob_assembly11440.pddl  prob_assembly115440.pddl  prob_assembly115450.pddl  prob_assembly116440.pddl  prob_assembly117440.pddl  prob_assembly117450.pddl  prob_assembly119440.pddl  prob_assembly120440.pddl  prob_assembly121440.pddl  prob_assembly123450.pddl  prob_assembly124440.pddl  prob_assembly124450.pddl  prob_assembly127450.pddl  prob_assembly131440.pddl  prob_assembly132440.pddl  prob_assembly136440.pddl  prob_assembly137440.pddl  prob_assembly137450.pddl  prob_assembly138440.pddl  prob_assembly139440.pddl  prob_assembly139450.pddl  prob_assembly140450.pddl  prob_assembly14440.pddl  (+122 more)
benchmarks/briefcaseworld/: briefcase.pddl
benchmarks/ferry/: ferry_test.pddl  prob_ferry0155.pddl  prob_ferry0156.pddl  prob_ferry0157.pddl  prob_ferry0158.pddl  prob_ferry0159.pddl  prob_ferry0165.pddl  prob_ferry0166.pddl  prob_ferry0167.pddl  prob_ferry0168.pddl  prob_ferry0169.pddl  prob_ferry0175.pddl  prob_ferry0176.pddl  prob_ferry0177.pddl  prob_ferry0178.pddl  prob_ferry0179.pddl  prob_ferry0185.pddl  prob_ferry0186.pddl  prob_ferry0187.pddl  prob_ferry0188.pddl  prob_ferry0189.pddl  prob_ferry0195.pddl  prob_ferry0196.pddl  prob_ferry0197.pddl  prob_ferry0198.pddl  prob_ferry0199.pddl  prob_ferry0205.pddl  prob_ferry0206.pddl  prob_ferry0207.pddl  prob_ferry0208.pddl  prob_ferry0209.pddl  prob_ferry0215.pddl  prob_ferry0216.pddl  prob_ferry0217.pddl  prob_ferry0218.pddl  prob_ferry0219.pddl  prob_ferry0225.pddl  prob_ferry0226.pddl  prob_ferry0227.pddl  prob_ferry0228.pddl  (+211 more)
benchmarks/freecell_gen/: prob_freecell0151722.pddl  prob_freecell0161722.pddl  prob_freecell0162222.pddl  prob_freecell0171722.pddl  prob_freecell0172422.pddl  prob_freecell0181722.pddl  prob_freecell0182422.pddl  prob_freecell0191722.pddl  prob_freecell1152422.pddl  prob_freecell1162022.pddl  prob_freecell1162322.pddl  prob_freecell1171822.pddl  prob_freecell1172122.pddl  prob_freecell1181522.pddl  prob_freecell1181622.pddl  prob_freecell1182122.pddl  prob_freecell1191822.pddl  prob_freecell1192122.pddl  prob_freecell1192322.pddl  prob_freecell1192422.pddl  prob_freecell2151522.pddl  prob_freecell2161822.pddl  prob_freecell2161922.pddl  prob_freecell2162422.pddl  prob_freecell2171622.pddl  prob_freecell2172222.pddl  prob_freecell2172322.pddl  prob_freecell2181822.pddl  prob_freecell2182222.pddl  prob_freecell2191622.pddl  prob_freecell3151822.pddl  prob_freecell3152022.pddl  prob_freecell3152322.pddl  prob_freecell3161622.pddl  prob_freecell3162122.pddl  prob_freecell3171522.pddl  prob_freecell3181922.pddl  prob_freecell3182022.pddl  prob_freecell3192022.pddl  prob_freecell3192222.pddl  (+10 more)
benchmarks/grid/: prob_grid_01010102290.pddl  prob_grid_0101072290.pddl  prob_grid_0101172290.pddl  prob_grid_0101182290.pddl  prob_grid_0108102290.pddl  prob_grid_0108112290.pddl  prob_grid_010992290.pddl  prob_grid_01110112290.pddl  prob_grid_0111072290.pddl  prob_grid_0111082290.pddl  prob_grid_01111102290.pddl  prob_grid_0111182290.pddl  prob_grid_0118112290.pddl  prob_grid_011872290.pddl  prob_grid_011882290.pddl  prob_grid_011892290.pddl  prob_grid_0119112290.pddl  prob_grid_011982290.pddl  prob_grid_081092290.pddl  prob_grid_0811102290.pddl  prob_grid_081182290.pddl  prob_grid_08872290.pddl  prob_grid_08882290.pddl  prob_grid_08892290.pddl  prob_grid_089102290.pddl  prob_grid_089112290.pddl  prob_grid_08972290.pddl  prob_grid_0910102290.pddl  prob_grid_0911102290.pddl  prob_grid_0911112290.pddl  prob_grid_091192290.pddl  prob_grid_098112290.pddl  prob_grid_09872290.pddl  prob_grid_09882290.pddl  prob_grid_09892290.pddl  prob_grid_099112290.pddl  prob_grid_1101072290.pddl  prob_grid_1101082290.pddl  prob_grid_1101172290.pddl  prob_grid_1101182290.pddl  (+224 more)
benchmarks/grid_bkp/: prob_grid_01010112290.pddl  prob_grid_0101082290.pddl  prob_grid_0101092290.pddl  prob_grid_01011102290.pddl  prob_grid_01011112290.pddl  prob_grid_0101192290.pddl  prob_grid_010872290.pddl  prob_grid_010882290.pddl  prob_grid_010892290.pddl  prob_grid_0109102290.pddl  prob_grid_0109112290.pddl  prob_grid_010972290.pddl  prob_grid_010982290.pddl  prob_grid_01110102290.pddl  prob_grid_0111092290.pddl  prob_grid_01111112290.pddl  prob_grid_0111172290.pddl  prob_grid_0111192290.pddl  prob_grid_0118102290.pddl  prob_grid_0119102290.pddl  prob_grid_011972290.pddl  prob_grid_011992290.pddl  prob_grid_0810102290.pddl  prob_grid_0810112290.pddl  prob_grid_081072290.pddl  prob_grid_081082290.pddl  prob_grid_0811112290.pddl  prob_grid_081172290.pddl  prob_grid_081192290.pddl  prob_grid_088102290.pddl  prob_grid_088112290.pddl  prob_grid_08982290.pddl  prob_grid_08992290.pddl  prob_grid_0910112290.pddl  prob_grid_091072290.pddl  prob_grid_091082290.pddl  prob_grid_091092290.pddl  prob_grid_091172290.pddl  prob_grid_091182290.pddl  prob_grid_098102290.pddl  (+252 more)
gal/: freecell stats.xlsx
gitignore/: .gitignore
lab/: .hgtags
src/: CMakeLists.txt  output  validate
src/search/: Makefile.depend  eager_search.cc  eager_search.h  heuristic.h  lazy_search.cc  lazy_search.cc_bkp_pac_grater_first  lazy_search.h  option_parser_util.h  plannerParameters.cc  search_progress.cc
src/search/landmarks/: landmark_count_heuristic.h
src/search/open_lists/: open_list.h  standard_scalar_open_list.cc  standard_scalar_open_list.h
(+12607 files in other folders)
