cmake_minimum_required(VERSION 3.3)
project(src)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    preprocess/axiom.cc
    preprocess/axiom.h
    preprocess/causal_graph.cc
    preprocess/causal_graph.h
    preprocess/domain_transition_graph.cc
    preprocess/domain_transition_graph.h
    preprocess/helper_functions.cc
    preprocess/helper_functions.h
    preprocess/max_dag.cc
    preprocess/max_dag.h
    preprocess/mutex_group.cc
    preprocess/mutex_group.h
    preprocess/operator.cc
    preprocess/operator.h
    preprocess/planner.cc
    preprocess/scc.cc
    preprocess/scc.h
    preprocess/state.cc
    preprocess/state.h
    preprocess/successor_generator.cc
    preprocess/successor_generator.h
    preprocess/variable.cc
    preprocess/variable.h
    search/ext/boost/config/abi/borland_prefix.hpp
    search/ext/boost/config/abi/borland_suffix.hpp
    search/ext/boost/config/abi/msvc_prefix.hpp
    search/ext/boost/config/abi/msvc_suffix.hpp
    search/ext/boost/config/compiler/borland.hpp
    search/ext/boost/config/compiler/clang.hpp
    search/ext/boost/config/compiler/codegear.hpp
    search/ext/boost/config/compiler/comeau.hpp
    search/ext/boost/config/compiler/common_edg.hpp
    search/ext/boost/config/compiler/compaq_cxx.hpp
    search/ext/boost/config/compiler/digitalmars.hpp
    search/ext/boost/config/compiler/gcc.hpp
    search/ext/boost/config/compiler/gcc_xml.hpp
    search/ext/boost/config/compiler/greenhills.hpp
    search/ext/boost/config/compiler/hp_acc.hpp
    search/ext/boost/config/compiler/intel.hpp
    search/ext/boost/config/compiler/kai.hpp
    search/ext/boost/config/compiler/metrowerks.hpp
    search/ext/boost/config/compiler/mpw.hpp
    search/ext/boost/config/compiler/nvcc.hpp
    search/ext/boost/config/compiler/pgi.hpp
    search/ext/boost/config/compiler/sgi_mipspro.hpp
    search/ext/boost/config/compiler/sunpro_cc.hpp
    search/ext/boost/config/compiler/vacpp.hpp
    search/ext/boost/config/compiler/visualc.hpp
    search/ext/boost/config/no_tr1/cmath.hpp
    search/ext/boost/config/no_tr1/complex.hpp
    search/ext/boost/config/no_tr1/functional.hpp
    search/ext/boost/config/no_tr1/memory.hpp
    search/ext/boost/config/no_tr1/utility.hpp
    search/ext/boost/config/platform/aix.hpp
    search/ext/boost/config/platform/amigaos.hpp
    search/ext/boost/config/platform/beos.hpp
    search/ext/boost/config/platform/bsd.hpp
    search/ext/boost/config/platform/cygwin.hpp
    search/ext/boost/config/platform/hpux.hpp
    search/ext/boost/config/platform/irix.hpp
    search/ext/boost/config/platform/linux.hpp
    search/ext/boost/config/platform/macos.hpp
    search/ext/boost/config/platform/qnxnto.hpp
    search/ext/boost/config/platform/solaris.hpp
    search/ext/boost/config/platform/symbian.hpp
    search/ext/boost/config/platform/vms.hpp
    search/ext/boost/config/platform/vxworks.hpp
    search/ext/boost/config/platform/win32.hpp
    search/ext/boost/config/stdlib/dinkumware.hpp
    search/ext/boost/config/stdlib/libcomo.hpp
    search/ext/boost/config/stdlib/libstdcpp3.hpp
    search/ext/boost/config/stdlib/modena.hpp
    search/ext/boost/config/stdlib/msl.hpp
    search/ext/boost/config/stdlib/roguewave.hpp
    search/ext/boost/config/stdlib/sgi.hpp
    search/ext/boost/config/stdlib/stlport.hpp
    search/ext/boost/config/stdlib/vacpp.hpp
    search/ext/boost/config/abi_prefix.hpp
    search/ext/boost/config/abi_suffix.hpp
    search/ext/boost/config/auto_link.hpp
    search/ext/boost/config/posix_features.hpp
    search/ext/boost/config/requires_threads.hpp
    search/ext/boost/config/select_compiler_config.hpp
    search/ext/boost/config/select_platform_config.hpp
    search/ext/boost/config/select_stdlib_config.hpp
    search/ext/boost/config/suffix.hpp
    search/ext/boost/config/user.hpp
    search/ext/boost/config/warning_disable.hpp
    search/ext/boost/detail/workaround.hpp
    search/ext/boost/exception/detail/attribute_noreturn.hpp
    search/ext/boost/exception/exception.hpp
    search/ext/boost/mpl/aux_/config/adl.hpp
    search/ext/boost/mpl/aux_/config/arrays.hpp
    search/ext/boost/mpl/aux_/config/ctps.hpp
    search/ext/boost/mpl/aux_/config/gcc.hpp
    search/ext/boost/mpl/aux_/config/intel.hpp
    search/ext/boost/mpl/aux_/config/lambda.hpp
    search/ext/boost/mpl/aux_/config/msvc.hpp
    search/ext/boost/mpl/aux_/config/nttp.hpp
    search/ext/boost/mpl/aux_/config/overload_resolution.hpp
    search/ext/boost/mpl/aux_/config/preprocessor.hpp
    search/ext/boost/mpl/aux_/config/static_constant.hpp
    search/ext/boost/mpl/aux_/config/ttp.hpp
    search/ext/boost/mpl/aux_/config/workaround.hpp
    search/ext/boost/mpl/aux_/preprocessor/enum.hpp
    search/ext/boost/mpl/aux_/preprocessor/params.hpp
    search/ext/boost/mpl/aux_/adl_barrier.hpp
    search/ext/boost/mpl/aux_/integral_wrapper.hpp
    search/ext/boost/mpl/aux_/lambda_support.hpp
    search/ext/boost/mpl/aux_/na_fwd.hpp
    search/ext/boost/mpl/aux_/nttp_decl.hpp
    search/ext/boost/mpl/aux_/static_cast.hpp
    search/ext/boost/mpl/aux_/template_arity_fwd.hpp
    search/ext/boost/mpl/aux_/yes_no.hpp
    search/ext/boost/mpl/bool.hpp
    search/ext/boost/mpl/bool_fwd.hpp
    search/ext/boost/mpl/int.hpp
    search/ext/boost/mpl/int_fwd.hpp
    search/ext/boost/mpl/integral_c.hpp
    search/ext/boost/mpl/integral_c_fwd.hpp
    search/ext/boost/mpl/integral_c_tag.hpp
    search/ext/boost/preprocessor/arithmetic/inc.hpp
    search/ext/boost/preprocessor/config/config.hpp
    search/ext/boost/preprocessor/control/expr_iif.hpp
    search/ext/boost/preprocessor/control/if.hpp
    search/ext/boost/preprocessor/control/iif.hpp
    search/ext/boost/preprocessor/debug/error.hpp
    search/ext/boost/preprocessor/detail/dmc/auto_rec.hpp
    search/ext/boost/preprocessor/detail/auto_rec.hpp
    search/ext/boost/preprocessor/detail/check.hpp
    search/ext/boost/preprocessor/detail/is_binary.hpp
    search/ext/boost/preprocessor/facilities/empty.hpp
    search/ext/boost/preprocessor/list/adt.hpp
    search/ext/boost/preprocessor/list/for_each_i.hpp
    search/ext/boost/preprocessor/logical/bool.hpp
    search/ext/boost/preprocessor/logical/compl.hpp
    search/ext/boost/preprocessor/punctuation/comma.hpp
    search/ext/boost/preprocessor/punctuation/comma_if.hpp
    search/ext/boost/preprocessor/repetition/detail/dmc/for.hpp
    search/ext/boost/preprocessor/repetition/detail/edg/for.hpp
    search/ext/boost/preprocessor/repetition/detail/msvc/for.hpp
    search/ext/boost/preprocessor/repetition/detail/for.hpp
    search/ext/boost/preprocessor/repetition/for.hpp
    search/ext/boost/preprocessor/repetition/repeat.hpp
    search/ext/boost/preprocessor/tuple/eat.hpp
    search/ext/boost/preprocessor/tuple/elem.hpp
    search/ext/boost/preprocessor/tuple/rem.hpp
    search/ext/boost/preprocessor/tuple/to_list.hpp
    search/ext/boost/preprocessor/cat.hpp
    search/ext/boost/preprocessor/comma_if.hpp
    search/ext/boost/preprocessor/inc.hpp
    search/ext/boost/preprocessor/repeat.hpp
    search/ext/boost/type_traits/detail/bool_trait_def.hpp
    search/ext/boost/type_traits/detail/bool_trait_undef.hpp
    search/ext/boost/type_traits/detail/ice_and.hpp
    search/ext/boost/type_traits/detail/ice_eq.hpp
    search/ext/boost/type_traits/detail/ice_not.hpp
    search/ext/boost/type_traits/detail/ice_or.hpp
    search/ext/boost/type_traits/detail/template_arity_spec.hpp
    search/ext/boost/type_traits/detail/type_trait_def.hpp
    search/ext/boost/type_traits/detail/type_trait_undef.hpp
    search/ext/boost/type_traits/detail/wrap.hpp
    search/ext/boost/type_traits/detail/yes_no_type.hpp
    search/ext/boost/type_traits/msvc/remove_reference.hpp
    search/ext/boost/type_traits/msvc/typeof.hpp
    search/ext/boost/type_traits/broken_compiler_spec.hpp
    search/ext/boost/type_traits/config.hpp
    search/ext/boost/type_traits/ice.hpp
    search/ext/boost/type_traits/integral_constant.hpp
    search/ext/boost/type_traits/is_lvalue_reference.hpp
    search/ext/boost/type_traits/is_reference.hpp
    search/ext/boost/type_traits/is_rvalue_reference.hpp
    search/ext/boost/type_traits/remove_reference.hpp
    search/ext/boost/any.hpp
    search/ext/boost/config.hpp
    search/ext/boost/current_function.hpp
    search/ext/boost/non_type.hpp
    search/ext/boost/static_assert.hpp
    search/ext/boost/throw_exception.hpp
    search/ext/boost/type.hpp
    search/ext/boost/version.hpp
    search/ext/tree.hh
    search/ext/tree_util.hh
    search/landmarks/exploration.cc
    search/landmarks/exploration.h
    search/landmarks/h_m_landmarks.cc
    search/landmarks/h_m_landmarks.h
    search/landmarks/lama_ff_synergy.cc
    search/landmarks/lama_ff_synergy.h
    search/landmarks/landmark_cost_assignment.cc
    search/landmarks/landmark_cost_assignment.h
    search/landmarks/landmark_count_heuristic.cc
    search/landmarks/landmark_count_heuristic.h
    search/landmarks/landmark_factory.cc
    search/landmarks/landmark_factory.h
    search/landmarks/landmark_factory_rpg_exhaust.cc
    search/landmarks/landmark_factory_rpg_exhaust.h
    search/landmarks/landmark_factory_rpg_sasp.cc
    search/landmarks/landmark_factory_rpg_sasp.h
    search/landmarks/landmark_factory_zhu_givan.cc
    search/landmarks/landmark_factory_zhu_givan.h
    search/landmarks/landmark_graph.cc
    search/landmarks/landmark_graph.h
    search/landmarks/landmark_graph_merged.cc
    search/landmarks/landmark_graph_merged.h
    search/landmarks/landmark_status_manager.cc
    search/landmarks/landmark_status_manager.h
    search/landmarks/landmark_types.h
    search/landmarks/util.cc
    search/landmarks/util.h
    search/learning/AODE.cc
    search/learning/AODE.h
    search/learning/classifier.cc
    search/learning/classifier.h
    search/learning/composite_feature_extractor.cc
    search/learning/composite_feature_extractor.h
    search/learning/feature_extractor.cc
    search/learning/feature_extractor.h
    search/learning/maximum_heuristic.cc
    search/learning/maximum_heuristic.h
    search/learning/naive_bayes_classifier.cc
    search/learning/naive_bayes_classifier.h
    search/learning/PDB_state_space_sample.cc
    search/learning/PDB_state_space_sample.h
    search/learning/probe_state_space_sample.cc
    search/learning/probe_state_space_sample.h
    search/learning/selective_max_heuristic.cc
    search/learning/selective_max_heuristic.h
    search/learning/state_space_sample.cc
    search/learning/state_space_sample.h
    search/learning/state_vars_feature_extractor.cc
    search/learning/state_vars_feature_extractor.h
    search/merge_and_shrink/abstraction.cc
    search/merge_and_shrink/abstraction.h
    search/merge_and_shrink/equivalence_relation.cc
    search/merge_and_shrink/equivalence_relation.h
    search/merge_and_shrink/label.cc
    search/merge_and_shrink/label.h
    search/merge_and_shrink/label_reducer.cc
    search/merge_and_shrink/label_reducer.h
    search/merge_and_shrink/labels.cc
    search/merge_and_shrink/labels.h
    search/merge_and_shrink/merge_and_shrink_heuristic.cc
    search/merge_and_shrink/merge_and_shrink_heuristic.h
    search/merge_and_shrink/merge_dfp.cc
    search/merge_and_shrink/merge_dfp.h
    search/merge_and_shrink/merge_linear.cc
    search/merge_and_shrink/merge_linear.h
    search/merge_and_shrink/merge_strategy.cc
    search/merge_and_shrink/merge_strategy.h
    search/merge_and_shrink/shrink_bisimulation.cc
    search/merge_and_shrink/shrink_bisimulation.h
    search/merge_and_shrink/shrink_bucket_based.cc
    search/merge_and_shrink/shrink_bucket_based.h
    search/merge_and_shrink/shrink_fh.cc
    search/merge_and_shrink/shrink_fh.h
    search/merge_and_shrink/shrink_random.cc
    search/merge_and_shrink/shrink_random.h
    search/merge_and_shrink/shrink_strategy.cc
    search/merge_and_shrink/shrink_strategy.h
    search/merge_and_shrink/variable_order_finder.cc
    search/merge_and_shrink/variable_order_finder.h
    search/open_lists/alternation_open_list.cc
    search/open_lists/alternation_open_list.h
    search/open_lists/open_list.h
    search/open_lists/open_list_buckets.cc
    search/open_lists/open_list_buckets.h
    search/open_lists/pareto_open_list.cc
    search/open_lists/pareto_open_list.h
    search/open_lists/standard_scalar_open_list.cc
    search/open_lists/standard_scalar_open_list.h
    search/open_lists/tiebreaking_open_list.cc
    search/open_lists/tiebreaking_open_list.h
    search/pdbs/canonical_pdbs_heuristic.cc
    search/pdbs/canonical_pdbs_heuristic.h
    search/pdbs/dominance_pruner.cc
    search/pdbs/dominance_pruner.h
    search/pdbs/match_tree.cc
    search/pdbs/match_tree.h
    search/pdbs/max_cliques.cc
    search/pdbs/max_cliques.h
    search/pdbs/pattern_generation_edelkamp.cc
    search/pdbs/pattern_generation_edelkamp.h
    search/pdbs/pattern_generation_haslum.cc
    search/pdbs/pattern_generation_haslum.h
    search/pdbs/pdb_heuristic.cc
    search/pdbs/pdb_heuristic.h
    search/pdbs/util.cc
    search/pdbs/util.h
    search/pdbs/zero_one_pdbs_heuristic.cc
    search/pdbs/zero_one_pdbs_heuristic.h
    search/additive_heuristic.cc
    search/additive_heuristic.h
    search/axioms.cc
    search/axioms.h
    search/blind_search_heuristic.cc
    search/blind_search_heuristic.h
    search/causal_graph.cc
    search/causal_graph.h
    search/cea_heuristic.cc
    search/cea_heuristic.h
    search/cg_cache.cc
    search/cg_cache.h
    search/cg_heuristic.cc
    search/cg_heuristic.h
    search/combining_evaluator.cc
    search/combining_evaluator.h
    search/doc.h
    search/domain_transition_graph.cc
    search/domain_transition_graph.h
    search/eager_search.cc
    search/eager_search.h
    search/enforced_hill_climbing_search.cc
    search/enforced_hill_climbing_search.h
    search/evaluator.h
    search/exact_timer.cc
    search/exact_timer.h
    search/ff_heuristic.cc
    search/ff_heuristic.h
    search/g_evaluator.cc
    search/g_evaluator.h
    search/globals.cc
    search/globals.h
    search/goal_count_heuristic.cc
    search/goal_count_heuristic.h
    search/heuristic.cc
    search/heuristic.h
    search/hm_heuristic.cc
    search/hm_heuristic.h
    search/int_packer.cc
    search/int_packer.h
    search/ipc_max_heuristic.cc
    search/ipc_max_heuristic.h
    search/iterated_search.cc
    search/iterated_search.h
    search/lazy_search.cc
    search/lazy_search.h
    search/legacy_causal_graph.cc
    search/legacy_causal_graph.h
    search/lm_cut_heuristic.cc
    search/lm_cut_heuristic.h
    search/max_evaluator.cc
    search/max_evaluator.h
    search/max_heuristic.cc
    search/max_heuristic.h
    search/operator.cc
    search/operator.h
    search/operator_cost.cc
    search/operator_cost.h
    search/option_parser.cc
    search/option_parser.h
    search/option_parser_util.cc
    search/option_parser_util.h
    search/per_state_information.cc
    search/per_state_information.h
    search/planner.cc
    search/plannerParameters.cc
    search/plannerParameters.h
    search/plugin.h
    search/pref_evaluator.cc
    search/pref_evaluator.h
    search/priority_queue.h
    search/relaxation_heuristic.cc
    search/relaxation_heuristic.h
    search/rng.cc
    search/rng.h
    search/scalar_evaluator.h
    search/search_engine.cc
    search/search_engine.h
    search/search_node_info.cc
    search/search_node_info.h
    search/search_progress.cc
    search/search_progress.h
    search/search_space.cc
    search/search_space.h
    search/segmented_vector.cc
    search/segmented_vector.h
    search/state.cc
    search/state.h
    search/state_id.cc
    search/state_id.h
    search/state_registry.cc
    search/state_registry.h
    search/successor_generator.cc
    search/successor_generator.h
    search/sum_evaluator.cc
    search/sum_evaluator.h
    search/timer.cc
    search/timer.h
    search/utilities.cc
    search/utilities.h
    search/weighted_evaluator.cc
    search/weighted_evaluator.h
    VAL/AbstractGraph.h
    VAL/Action.cpp
    VAL/Action.h
    VAL/Analyser.h
    VAL/Analysis.cpp
    VAL/Cascader.h
    VAL/CausalGraph.cpp
    VAL/CausalGraph.h
    VAL/DebugWriteController.cpp
    VAL/DebugWriteController.h
    VAL/DYNA.cpp
    VAL/dynaMain.cpp
    VAL/DYNATranslator.cpp
    VAL/DYNATranslator.h
    VAL/Environment.cpp
    VAL/Environment.h
    VAL/Evaluator.cpp
    VAL/Evaluator.h
    VAL/Events.cpp
    VAL/Events.h
    VAL/Exceptions.h
    VAL/FastEnvironment.cpp
    VAL/FastEnvironment.h
    VAL/FuncAnalysis.cpp
    VAL/FuncAnalysis.h
    VAL/FuncExp.cpp
    VAL/FuncExp.h
    VAL/GoalHypSpace.h
    VAL/graphconstruct.cpp
    VAL/graphconstruct.h
    VAL/HowAnalyser.cpp
    VAL/HowAnalyser.h
    VAL/HowWhatWhenMain.cpp
    VAL/instantiation.cpp
    VAL/instantiation.h
    VAL/instantiationConstraint.cpp
    VAL/instantiationIP.cpp
    VAL/instantiationIP.h
    VAL/instantiationMain.cpp
    VAL/InstPropLinker.cpp
    VAL/InstPropLinker.h
    VAL/LaTeXSupport.cpp
    VAL/LaTeXSupport.h
    VAL/lex.yy.cc
    VAL/LPGP.cpp
    VAL/LPGPTranslator.cpp
    VAL/LPGPTranslator.h
    VAL/macros.h
    VAL/main.cpp
    VAL/main.h
    VAL/OptInterface.h
    VAL/Ownership.cpp
    VAL/Ownership.h
    VAL/parse.cpp
    VAL/parse_error.h
    VAL/PartialPlan.cpp
    VAL/PartialPlan.h
    VAL/Partitions.h
    VAL/PinguPlanGenerator.cpp
    VAL/PinguPlanGenerator.h
    VAL/PingusTranslator.cpp
    VAL/Plan.cpp
    VAL/Plan.h
    VAL/PlanExecutionTracker.h
    VAL/PlanRec.cpp
    VAL/Polynomial.cpp
    VAL/Polynomial.h
    VAL/PrettyPrinter.cpp
    VAL/PrettyPrinter.h
    VAL/Proposition.cpp
    VAL/Proposition.h
    VAL/ptree.cpp
    VAL/ptree.h
    VAL/random.cpp
    VAL/random.h
    VAL/Relax.cpp
    VAL/RelaxTranslator.cpp
    VAL/RelaxTranslator.h
    VAL/RepairAdvice.cpp
    VAL/RepairAdvice.h
    VAL/RobustAnalyse.cpp
    VAL/RobustAnalyse.h
    VAL/SASActions.cpp
    VAL/SASActions.h
    VAL/SearchSpace.cpp
    VAL/SearchSpace.h
    VAL/SimpleEval.cpp
    VAL/SimpleEval.h
    VAL/sStack.h
    VAL/State.cpp
    VAL/State.h
    VAL/StateObserver.h
    VAL/tDistribution.h
    VAL/TIM.cpp
    VAL/TIM.h
    VAL/TIMMain.cpp
    VAL/TimSupport.cpp
    VAL/TimSupport.h
    VAL/TIMUtilities.h
    VAL/ToFnMain.cpp
    VAL/ToFunction.cpp
    VAL/ToFunction.h
    VAL/TrajectoryConstraints.cpp
    VAL/TrajectoryConstraints.h
    VAL/typecheck.cpp
    VAL/typecheck.h
    VAL/TypedAnalyser.cpp
    VAL/TypedAnalyser.h
    VAL/TypedAnalysis.cpp
    VAL/TypeStrip.cpp
    VAL/TypeStripWC.cpp
    VAL/TypeStripWC.h
    VAL/Utils.cpp
    VAL/Utils.h
    VAL/Validator.cpp
    VAL/Validator.h
    VAL/VisitController.h
    VAL/WriteController.h)

add_executable(src ${SOURCE_FILES})